--- a/WcfWebApi/packages.config
+++ b/WcfWebApi/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="HttpClient" version="0.6.0" />
   <package id="JsonValue" version="0.6.0" />
+  <package id="Ninject" version="2.2.1.4" />
   <package id="WebApi" version="0.6.0" />
   <package id="WebApi.All" version="0.6.0" />
   <package id="WebApi.Enhancements" version="0.6.0" />
