Fixes my IoC container - now all loosely coupled :)

--- a/WcfWebApi/WcfWebApi.vbproj
+++ b/WcfWebApi/WcfWebApi.vbproj
@@ -198,8 +198,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>7294</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>
-          </IISUrl>
+          <IISUrl>http://localhost/WebWcfApi</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
